nextcloud: fix secretRef redisConnectionString

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
@@ -339,7 +339,7 @@ nextcloud:
         - name: DATABASE_URL
           valueFrom:
             secretKeyRef:
-              name: nextcloud
+              name: psql-nextcloud
               key: dbConnectionstring
         - name: REDIS_URL
           valueFrom:
