nextcloud: fix dbconnectionstring

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/values.yaml
@@ -340,7 +340,7 @@ nextcloud:
           valueFrom:
             secretKeyRef:
               name: psql-nextcloud
-              key: dbConnectionstring
+              key: dbConnectionString
         - name: REDIS_URL
           valueFrom:
             secretKeyRef:
