--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
@@ -7,7 +7,11 @@ resources:
   - helm-release.yaml
   - cm-pre-upgrade.yaml
   - cm-post-upgrade.yaml
-  - svc-nextcloud-alt.yaml
+patches:
+  - path: patch-service-push.yaml
+    target:
+      kind: Service
+      name: nextcloud
 configMapGenerator:
   - name: nextcloud-helm-values
     namespace: cloud
