--- a/kubernetes/talos-flux/apps/cloud/nextcloud/flux-sync.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/flux-sync.yaml
@@ -19,24 +19,24 @@ spec:
   wait: true
   dependsOn:
     - name: apps-cloudnative-pg-cluster
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: apps-nextcloud-config
-  namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
-spec:
-  interval: 10m
-  path: ./kubernetes/talos-flux/apps/cloud/nextcloud/config
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-ops
-  decryption:
-    provider: sops
-  wait: true
-  dependsOn:
-    - name: apps-nextcloud
+# ---
+# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: apps-nextcloud-config
+#   namespace: flux-system
+#   labels:
+#     substitution.flux.home.arpa/enabled: "true"
+# spec:
+#   interval: 10m
+#   path: ./kubernetes/talos-flux/apps/cloud/nextcloud/config
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: home-ops
+#   decryption:
+#     provider: sops
+#   wait: true
+#   dependsOn:
+#     - name: apps-nextcloud
