--- a/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
@@ -1,4 +1,5 @@
-papiVersion: v1
+---
+apiVersion: v1
 kind: Secret
 metadata:
     name: psql-nextcloud
@@ -23,8 +24,8 @@ sops:
             Ri9jdW1nNmlhT09NV0JxT3VRU08wdVUKwp97oURgT8PLOjvmcFEfVBBiBeHp65Wx
             8mP/CLD2ldCCl8abhWaasmpHbh8mWjxBh72BD1NuzdVfj/3zP9ZS2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T13:45:57Z"
-    mac: ENC[AES256_GCM,data:TtKp6d5lEfsfYXJZUqgjQX8Ncot113bOgcXsqjjyqGxC8OoI5CaLy1fsxaJGCYUkSqdFBbm0l3/61/DJ4cgUVXkG8ecdILAYNxt72se1HrQm7NOmzPynssxZCV0V7gtz3GfoLsEMWbolJUPNHGXkXNWfOFeIaIi2jgUYzGEWaZ8=,iv:kNzctcl2C5Fl5EPxGBAALbFFXDWKgd4q/3Ul0Y6A+3c=,tag:hOF60KZo/8Bu3n57U9g5qA==,type:str]
+    lastmodified: "2025-03-24T13:52:30Z"
+    mac: ENC[AES256_GCM,data:KVsEiwpzLzLOMKWQskJqCBg82Tf3ucyTFlGF2hzRULPLiL2/Xd8/kjwV1l2t14TdH86fcNCcnUzOf9sg999Rn0K055uOlecECv+UuCp1RnFav8r3y3eWyOCXPVE9HFvk19Mp3sCHmeSotFzQxB+7md8pfR3c/GlBrIXHILft9xM=,iv:rmM0/mbVQzH1MSGI9+QEnha7RTk5hVWm1qJNsXZYpm0=,tag:VbRPxyID0ajUa4x/0rPYIQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
