Nextcloud: fix ingres, healtcheck with metrics port and service patch

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/patch-service-push.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/patch-service-push.yaml
@@ -21,4 +21,7 @@ spec:
     - name: push
       port: 7867
       targetPort: 7867
+    - name: push-metrics
+      port: 9206
+      targetPort: 9206
   type: ClusterIP
