--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - helm-release.yaml
   - cm-pre-upgrade.yaml
   - cm-post-upgrade.yaml
+  - ingress-nextcloud-push.yaml
 patches:
   - path: patch-service-push.yaml
     target:
