uptime-kuma: disable dependency on traefik

--- a/kubernetes/talos-flux/apps/observability/uptime-kuma/flux-sync.yaml
+++ b/kubernetes/talos-flux/apps/observability/uptime-kuma/flux-sync.yaml
@@ -17,4 +17,5 @@ spec:
   wait: true
   dependsOn:
     # - name: apps-rook-ceph-cluster
-    - name: apps-traefik
+    - name: cilium
+      namespace: flux-system
