--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/ingress-nextcloud-push.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/ingress-nextcloud-push.yaml
@@ -10,6 +10,7 @@ metadata:
     kubernetes.io/tls-acme: "true"
 
 spec:
+  ingressClassName: cilium
   rules:
     - host: cloud.${SECRET_DOMAIN}
       http:
