--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster15.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster15.yaml
@@ -16,23 +16,15 @@ spec:
       secret:
         name: postgres-superuser
   storage:
-    size: 30Gi
-    storageClass: openebs-hostpath
+    pvcTemplate:
+      volumeName: postgres16
+      storageClassName: openebs-hostpath
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 30Gi
   superuserSecret:
     name: postgres-superuser
   monitoring:
     enablePodMonitor: true
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres15-1
-  namespace: database
-spec:
-  storageClassName: openebs-hostpath
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 30Gi
