--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster17.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/cluster17.yaml
@@ -6,6 +6,7 @@ metadata:
   name: postgres17
   namespace: database
 spec:
+  enableSuperuserAccess: true
   instances: 1
   imageName: ghcr.io/cloudnative-pg/postgresql:17
   primaryUpdateStrategy: unsupervised
@@ -17,13 +18,13 @@ spec:
         name: postgres-superuser
   storage:
     pvcTemplate:
-      storageClassName: openebs-hostpath
-      volumeMode: Filesystem
       accessModes:
         - ReadWriteOnce
       resources:
         requests:
-          storage: 30Gi
+          storage: 2Gi
+      storageClassName: openebs-hostpath
+      volumeMode: Filesystem
   superuserSecret:
     name: postgres-superuser
   monitoring:
