--- a/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/talos-flux/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -5,10 +5,9 @@ kind: Kustomization
 namespace: database
 resources:
   - postgres-superuser-secret.sops.yaml
-  # - postgres-minio-secret.sops.yaml
   - cluster15.yaml
+  - cluster17.yaml
   - database-server.yaml
-  - scheduled-backup.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: cloudnative-pg-cluster
