Nextcloud: fix helmrelease with image tag pinning

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/helm-release.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/helm-release.yaml
@@ -26,3 +26,8 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: nextcloud-helm-values
+  values:
+    image:
+      repository: nextcloud
+      # {"$imagepolicy": "flux-system:nextcloud"}
+      tag: 31.0.2-apache
