apps-nextcloud: replace redis subchart with dragonfly cluster, add envoy ttl for notify-push ingress, fix post-upgrade scripts cm

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/app/cm-post-upgrade.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/app/cm-post-upgrade.yaml
@@ -2,15 +2,15 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: post-upgrade
+  name: post-upgrade-scripts
   labels:
     app.kubernetes.io/name: nextcloud
 data:
   long-running-migration-steps.sh: |
     #!/bin/bash
-    runuser -u www-data -g www-data php occ upgrade
-    runuser -u www-data -g www-data php occ db:add-missing-columns
-    runuser -u www-data -g www-data php occ db:add-missing-indices
-    runuser -u www-data -g www-data php occ db:add-missing-primary-keys
-    runuser -u www-data -g www-data php occ maintenance:repair --include-expensive
-    runuser -u www-data -g www-data php occ maintenance:mode --off
+    runuser -u www-data -g www-data php -- occ upgrade
+    runuser -u www-data -g www-data php -- occ db:add-missing-columns
+    runuser -u www-data -g www-data php -- occ db:add-missing-indices
+    runuser -u www-data -g www-data php -- occ db:add-missing-primary-keys
+    runuser -u www-data -g www-data php -- occ maintenance:repair --include-expensive
+    runuser -u www-data -g www-data php -- occ maintenance:mode --off
