Nextcloud: fix reflected secret

--- a/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/secret-psql-nextcloud.sops.yaml
@@ -1,19 +1,17 @@
----
 apiVersion: v1
 kind: Secret
 metadata:
     name: psql-nextcloud
     namespace: cloud
+    annotations:
+        reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+        reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: database
 type: Opaque
 stringData:
-    db-password: ENC[AES256_GCM,data:K5DZCAo2Mf+7vCit7xEPHrfbwQ0tzrMHZNv6/JeILpRILcw=,iv:dg3YBI3h1FBRJMKIl5eBWPcKFPiu6PF08Z4JX3g+7lY=,tag:LstLVy+0TZfHZgaedrQ0wg==,type:str]
-    db-username: ENC[AES256_GCM,data:EchtsN3N1oEh,iv:vkpEhlzu4kSj8/U/R/RwWX4gLRkPtQYVqalKXMTiqiU=,tag:jckwQ2zf78TzowDBILOhGQ==,type:str]
-    dbConnectionString: ENC[AES256_GCM,data:MmLV37HkzNU1QzAp5yMLTG9fSpPt7hAQGmSEb1HEMFzqGvPT7+tH+8lbB4PWhXzhQRGn4qzQ/2qktUhM6krATzWBaVfl1VCNzO5ZSTQgikaOHccunmEtjZc3Myh2r6kkZX1SZhi1/+9b0OEvbE2Z/A==,iv:oiCJHM51ftJFwrRpEz8udvl9cC5CAVBtHPeOkMCQV5E=,tag:2hnlzCRRWXvbPOuQC1NGjw==,type:str]
+    db-password: ENC[AES256_GCM,data:lx2oDBoXJUHu7HTq9qC230kkX4G1wpdUhm3KOrEmliA192k=,iv:Hwb9t62bsOWnU/g7OqtkxHfPOPl5trAP1jPvDBHSJP0=,tag:RTvrEeuC0t2+cWn4cdZLJw==,type:str]
+    db-username: ENC[AES256_GCM,data:HTYpm2mGja1c,iv:ygNjl/HNkySUT76JRkE5keXIk9GzoPUdcxrL+Mo7wU4=,tag:XjjfBnvhRFjlkR6t8GHKqA==,type:str]
+    dbConnectionString: ENC[AES256_GCM,data:m2PKlUIP5wd5DaoKGlIG6yKgmzNRgBE4Ad7NiRrJs+a26HKTrEct/y5cWLz9dE5IxzjSRBmOxvGikGV+de+oUWDbmpN4w1zE7ixteSoyio+edd0+79SWysx938F9Kqi1tzcjJ0p/pmxyF2SQL2Mw+Q==,iv:LFmgv58MiTGJgu1zHJfQlJ+LA1jAXC4xU8Gh/XB/Y5w=,tag:o5FQe0+yEZFFDntt7dQiPA==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
           enc: |
@@ -24,8 +22,30 @@ sops:
             Ri9jdW1nNmlhT09NV0JxT3VRU08wdVUKwp97oURgT8PLOjvmcFEfVBBiBeHp65Wx
             8mP/CLD2ldCCl8abhWaasmpHbh8mWjxBh72BD1NuzdVfj/3zP9ZS2g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T13:52:30Z"
-    mac: ENC[AES256_GCM,data:KVsEiwpzLzLOMKWQskJqCBg82Tf3ucyTFlGF2hzRULPLiL2/Xd8/kjwV1l2t14TdH86fcNCcnUzOf9sg999Rn0K055uOlecECv+UuCp1RnFav8r3y3eWyOCXPVE9HFvk19Mp3sCHmeSotFzQxB+7md8pfR3c/GlBrIXHILft9xM=,iv:rmM0/mbVQzH1MSGI9+QEnha7RTk5hVWm1qJNsXZYpm0=,tag:VbRPxyID0ajUa4x/0rPYIQ==,type:str]
-    pgp: []
+    lastmodified: "2025-04-28T16:21:39Z"
+    mac: ENC[AES256_GCM,data:KSYve0PBM3FYMzMpWQvkWdElpHM9eT+kcJf28N4nVnx764fGjdj1FfUAnO0qtufDUxorHVWTboTS0+AJoBsPEc0b1LOkegJK3z269NyIix/nHR/o55WkvCD85BSCLoHp6d7ianFcCm/LX4AivFRwBAWiH6u8oUT4rC1sQ6XDcPU=,iv:5giBhSR1iiqhpe3WlBv4iC3WgBJh9JH3lvLr7i4zUOo=,tag:Pguuj6A9pTPf5BMXCqGYAA==,type:str]
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.4
+    version: 3.10.1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+    name: psql-nextcloud
+    namespace: database
+    annotations:
+        reflector.v1.k8s.emberstack.com/reflects: cloud/psql-nextcloud
+sops:
+    age:
+        - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSGNGMzh1c1lYc1VHM3R4
+            K3lEblBJU0ViVzZOZVg4VUlCYnU3QkE5MEhBCmVKYURBS2J0N2M1RFVQVnRRUll5
+            eTR2eWNJaTNRMHg5bWtKU2NzbVpwUGMKLS0tIHhmVExaQjBlaTRDWWdibGVXZUVq
+            Ri9jdW1nNmlhT09NV0JxT3VRU08wdVUKwp97oURgT8PLOjvmcFEfVBBiBeHp65Wx
+            8mP/CLD2ldCCl8abhWaasmpHbh8mWjxBh72BD1NuzdVfj/3zP9ZS2g==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-04-28T16:21:39Z"
+    mac: ENC[AES256_GCM,data:KSYve0PBM3FYMzMpWQvkWdElpHM9eT+kcJf28N4nVnx764fGjdj1FfUAnO0qtufDUxorHVWTboTS0+AJoBsPEc0b1LOkegJK3z269NyIix/nHR/o55WkvCD85BSCLoHp6d7ianFcCm/LX4AivFRwBAWiH6u8oUT4rC1sQ6XDcPU=,iv:5giBhSR1iiqhpe3WlBv4iC3WgBJh9JH3lvLr7i4zUOo=,tag:Pguuj6A9pTPf5BMXCqGYAA==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    version: 3.10.1
