--- a/kubernetes/talos-flux/apps/cloud/nextcloud/secret-nextcloud.sops.yaml
+++ b/kubernetes/talos-flux/apps/cloud/nextcloud/secret-nextcloud.sops.yaml
@@ -1,35 +1,30 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: nextcloud
-    namespace: cloud
+  name: nextcloud
+  namespace: cloud
 type: Opaque
 stringData:
-    nextcloud-username: ENC[AES256_GCM,data:m/hMkfLkmFo=,iv:91IfKegc+GTIo31GgG0z/OePwM7wk29+14xiMNpykPY=,tag:Mcb8rU/8jQOYhiNKyoZU/A==,type:str]
-    nextcloud-password: ENC[AES256_GCM,data:D3er3bWNAFWTmpM95+EiC8SNwA==,iv://QEYYu6rrpo4CtGoZXUrb+mrLPrk7kxPkhN7/FcikM=,tag:LlG3V3MTpMwT7KXxqjhBag==,type:str]
-    smtp-username: ENC[AES256_GCM,data:Q8jt+lhbpsc3UKl6tQGKVbWL,iv:GgPrc1x3GLJUaCtY+doN8QsnYZv4zhK3s0t0LDZ+8aM=,tag:CNs/KocZvMhjZHr8WXpdOA==,type:str]
-    smtp-password: ENC[AES256_GCM,data:CaSmr5cEwPF7JI2LRM78LPyw,iv:O2mpSR9SB2O9N7W2iGO6jK/lwcW7ye9sozzKcfoWdJY=,tag:7fi2kbbKQw+NJ2iQLUN2TA==,type:str]
-    smtp-host: ENC[AES256_GCM,data:zoibzARlIN5N0rrCqSVyUrFZizDb,iv:O+np3kJ3qbwVG6pdzCrwRLwev55XS/u734AULrKJWyo=,tag:FxWMZGdyVOR54eQxNNSRwA==,type:str]
-    redisPassword: ENC[AES256_GCM,data:fzZ9n/e7/3n0IdcVzzwATOpLgq4Srlwz,iv:Z9dCKBi+Lwj4PrQqxuVx1hShndP3U28zOsDJCEQeavo=,tag:6iNcJswq7GeAKWVjpGSQDA==,type:str]
-    redisConnectionString: ENC[AES256_GCM,data:Qks8oewoZQRi8uQ3blzUVVKXLYTUZ5KyMLkaoPKvLRj/8VW3/c2yst9tbkArMLHWlqb+1t2m7CeI+I0aJR2An76L4h4=,iv:eNqKkW+wwWjgkC1OLpgC2HH6WsiHWAgHjK2vXMrNnRo=,tag:9ebR4BQia9RUrh+ttSnTyQ==,type:str]
-    nextcloud-token: ENC[AES256_GCM,data:VfzeX2dWKwwoXoE4NisLB5/wnLV5Tfh9e/r5vxdDr7K/3RDBtZt3/MhXlw2p7a6H8+CtbFMblghiMmdnoizUdA==,iv:pKaAzCJChURsd72hMpy6nZ3t6shX8nlyPUZFvM5iWVQ=,tag:NeluB+suhpoSEiq33bBAow==,type:str]
+  nextcloud-username: ENC[AES256_GCM,data:Rmnd09RbOHU=,iv:gMuLmjJszoOGQagCQZesIVVMeh+xiydLuBqO8h3sI40=,tag:e8RNQ0pSArRcg5Y4tVfBzg==,type:str]
+  nextcloud-password: ENC[AES256_GCM,data:ZtCAv2r5sPDU/bU2Ulf+YaXuSw==,iv:UZ+pgEnjLSZVaDm12kU96auTWfehJJUNaTpjCwY9k5I=,tag:383xswcchP5ZVA1UU3b7Jw==,type:str]
+  smtp-username: ENC[AES256_GCM,data:H7f3sUJVj3YtV4gFixwquWWR,iv:+jPhoVR3udLApib9CTVVPs6uErvjr5TU0udxAwuAxKM=,tag:EKeuZehHa1k0KewbqYKKFQ==,type:str]
+  smtp-password: ENC[AES256_GCM,data:uZKR9PU7LSEJO/8EL2DxSZMP,iv:UOw7jz4RaKih2m5mfNGDNkHKMmq51xVFBrHBT5Y/Elk=,tag:lZxl4mWpgk5FHijyrFK9mA==,type:str]
+  smtp-host: ENC[AES256_GCM,data:jdcbXxrn70BJZZeWFIR1VJ1L+ffn,iv:YU2MHapqAXhXRWAAIt8cjKvCxZvKZr2iRAMllFT7sm4=,tag:eywop32ooNvcPc+8Qm9LvQ==,type:str]
+  redisPassword: ""
+  redisConnectionString: ENC[AES256_GCM,data:l0wDVVycSPNN21P4F4YdS3nJZSGUuJwtQSTsOb6phg==,iv:seUPgC27q/DEKMhyiVi6BIrqruL+87bXjCyh+5uJ7wQ=,tag:R6L/mzXztDd5Zj5UGWP+1w==,type:str]
+  nextcloud-token: ENC[AES256_GCM,data:V9Prz0FsU58/ngIhAH3chYJZK334hNIS1Ypxb6mo363BnQOuByG+/uMnR74hfOkveNLVZNSnpnr9EenQuvLkhA==,iv:zKQfhD/X8fiY+yznuxGNQDO9cG7UFeEdAC41ViVBHW8=,tag:Zc/WF12wFYyB+g/4sF4pxg==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3NGQ1eVFxQW8yeFFaRWJ3
-            Uk1CTm16cUdEQ1FxaTBSMExQTlNORWJnbmpnCjU3Ty9nRlhaUnFtcXhqT3pONU9W
-            UkdRUTQxa0pIc1N2MWt2NXBadXFpZlUKLS0tIDAwWG1KSzkxMDl5dHNORkljK2I4
-            SW9FbTloL3g0NVZFNE5nVVFid01rck0Kc2elyIP4knEulOM7POCC0RnOHF41aToc
-            ZzI5dCO5yQYmUqh8EJZso7HUbItcE5SxTJ0AL51RwTMt+PPriy5KKw==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-24T16:17:03Z"
-    mac: ENC[AES256_GCM,data:QQ+h8b4uJ12TjapnxgPyWfVZvll89CKnavHqn1IFbYWbpZiGc64IAolrSW7SolRN8bdmKVgoNC8RLfL6SEBRbVtkiniQPXnJz4cFgvOoZ3AX9ovAaj34aSv8ejp+QJAMlb3Mc5kzVe3wrlTXAUJQimBiWIuoolLE2eVp9S9RuUk=,iv:PGG+HM/H2P+7XGeVsFhA9nDa5zJAWSQFwzX1FGquK8g=,tag:nYLLGGM0XuJG8ekuX6h0XQ==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.4
+  age:
+    - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
+      enc: |
+        -----BEGIN AGE ENCRYPTED FILE-----
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3UWdpMmJBWDFhS3hwQml0
+        VzJRK3hyT2JIdVB2SXVXK0NHeUIxc0dpTEM4Cm9HTFZqUjdteWJtL2lTdUpXQWp1
+        ek45dTJ3OXJYaFZFejBDT05OYi9WY0UKLS0tIHoyeS9UUVJTTjg3OW1VY2dOWW5y
+        Z3dvR1cyMnpxaERsaTFNZFQ1c0tMS2cKPxEud874I/lugiKxDafUTV1waYZ/CkGW
+        /+qYLoFZubsTq+Tud66YKKaBeWD3jvkXxhLxKmKs2/tU7alVK8vL8A==
+        -----END AGE ENCRYPTED FILE-----
+  lastmodified: "2025-05-12T13:37:31Z"
+  mac: ENC[AES256_GCM,data:HStVlwI7RaYXlRTGlxpDXpNyPzz6jf7T/+t2ukx7RYOpWJ7Z8/vk6fmfLZCTTL1AFQdGTh0EwSVYFF6lq6UFom+yy/mKSf5a88axwmzjSezgKn9F/dVDi5Qw3zNKrtYrh4xJ4F1k6s9ZPCkPi/wVVKlehgQDgvNzgW73yrftj28=,iv:s8mmZrA7hQuUHqQy/N9OxesW+edGqBLnZH5eYSAHAPA=,tag:b+O10wVcy6n1YFje4IEp8g==,type:str]
+  encrypted_regex: ^(data|stringData)$
+  version: 3.10.2
