Cilium-envoy: allow priveledged ports

--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
@@ -94,6 +94,7 @@ securityContext:
       - FOWNER
       - SETGID
       - SETUID
+      - NET_BIND_SERVICE
     cleanCiliumState:
       - NET_ADMIN
       - SYS_ADMIN
@@ -105,4 +106,4 @@ cgroup:
   hostRoot: "/sys/fs/cgroup"
 
 envoyConfig:
-  enabled: false
+  enabled: true
