--- a/kubernetes/homelab/flux/config/cluster-secrets.sops.yaml
+++ b/kubernetes/homelab/flux/config/cluster-secrets.sops.yaml
@@ -1,22 +1,25 @@
-secretName: cluster-secrets
+apiVersion: v1
+kind: Secret
 metadata:
+  name: cluster-secrets
+  namespace: flux-system
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:ONCC3NVNTw==,iv:zZsCfcyfw0NB5/qfAw5/kyUQ3g1lVv+8CCHYIVLQhBc=,tag:8v3bSi0L+GXR3c1uiYWRSQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:ubscppLULQ==,iv:Eo88UG4SHlOBZ0Tvar7ApHJtsl9+cTBdWhlv0UdufbE=,tag:uBfHlwe4zS80mS3vcrMVoA==,type:str]
   SECRET_EMAIL: ""
 sops:
   age:
     - recipient: age15gfkljk0c50s57t86eu6gdzxenpqrn4frlmd5vwcv57w962w2cfswxz4ge
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNa1haMExRMGM5YVhmcWIr
-        R3IyTERVWWg1cyt2WktmTUlRQTErZktuekdFCmVxRHBiQmtwVU5HcjdJdTUyZG5h
-        MzBCUmFkL1BPc0c0WU5kU0pZRWFGUlUKLS0tIDBrd0pSMTZEalEwWkRqWXBZekw1
-        NjZPUFVPQVJ3aWxWM2UrcDZ2ODFONFkKmEVu06nlpc4glmf+sCNFpDs5NgK2udia
-        lISSqqwpgr8cMq7zwjbZwOEEDpCMHSJxEGcqSmSUbhAZHDimPtrkGw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6MHpPQmRlRmtSN1FLdnlr
+        UWVJNkNVSG96VElnaE9hWEFwNG9hLzk1d2pRCmJWTUc3bE5ERmxwMFNzb1pDS3lu
+        Nkc3dkpMd0FJaS80Q3pUNzE3ZXpuRFEKLS0tIHliRG4yZ1lTbFNOMStuOWJYK2pt
+        akpUODNHbjQ0MHdKdlJoZklUVWg3eEkK5DZJ1ZOisj5I7HZU/3NIh6u6Xwvkbc1h
+        usvKdT3qVppi6aeBGRKwOr8/lBUL7dIfVz5++pu7k9XoRH/+kQ2xzg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-05-25T12:59:11Z"
-  mac: ENC[AES256_GCM,data:hVFRHNqNQaOESnBjxyYAfcDhH51DIJNsTkz8tFdFeJFvDyvNaubYX5D3Zvhkp5Q8AminiPZnybAcDcRcgg0fI4bXCdkwA4jqFyfj4s51pb/r1mi/S97im5Uzc+OpkAO7kissWxue6pINIgU+rvh3V76yeXVb9SwlYulLk72o1R8=,iv:V/6p5YH9t3J/SrbcGJN60+FYBUGUfr8sM6RT8zTILOg=,tag:84Hrq/NNuArZdYhlf/hdKw==,type:str]
+  lastmodified: "2025-07-27T17:34:28Z"
+  mac: ENC[AES256_GCM,data:l78YdZaLaIASywHR8MhXeFMvCGrpeCW0P3VXRknnlCNE3xJeKWCxWYgwJdxd7hRgvpWVcTV0Xf8Ab+xpP35yGaFPwWbgE/2ge6CGoP2isO0Ekkfu7UEFO1Zk327kLBYverXq4MQgXuIgE1vyhVdk4bSSRzchkY8T8iZyXhBqO50=,iv:2fZ4Jb7orWp363wfjyk6FT7IekefjApU1s6jafACDLk=,tag:pnEd7YhXodL8PN/TCbObLg==,type:str]
   encrypted_regex: ^(data|stringData)$
   version: 3.10.2
