cilium: upgrade to helmrelease 1.18.2

--- a/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
+++ b/kubernetes/talos-flux/apps/kube-system/cilium/app/values.yaml
@@ -72,7 +72,12 @@ operator:
       enabled: true
       labels:
         release: prometheus-stack
-
+relabelings:
+  - sourceLabels:
+      - __meta_kubernetes_pod_node_name
+    targetLabel: node
+    action: replace
+    replacement: ${1}
 l2NeighDiscovery:
   enabled: true
 l2announcements:
